--- a/P006867.opf/meta.yml
+++ b/P006867.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W8LS17056
   title: ལམ་རིམ་དམིགས་རིམ་མདོར་བསྡུས།
   author: ''
-  volumes: {}
+  volumes:
+    fcb12770525a4cc38c37697a4fd953cf:
+      image_group_id: I8LS17062
+      title: ''
+      volume_number: 1
+      total_pages: 30
