--- a/P006867.opf/layers/v001/pagination.yml
+++ b/P006867.opf/layers/v001/pagination.yml
@@ -3,205 +3,176 @@ annotation_type: pagination
 revision: '00001'
 annotations:
   c797195cea5f4cf8b65c3840150c0130:
-    page_index: 1a
-    page_info: null
-    reference: I8LS170620001
+    imgnum: 1
+    reference: I8LS170620001.tif
     span:
       start: 0
       end: 574
   735608082b8843b08249a5bc69afc066:
-    page_index: 2a
-    page_info: null
-    reference: I8LS170620003
+    imgnum: 3
+    reference: I8LS170620003.jpg
     span:
       start: 579
       end: 634
   ea2b5d604f384be4879785762caf16c4:
-    page_index: 2b
-    page_info: null
-    reference: I8LS170620004
+    imgnum: 4
+    reference: I8LS170620004.jpg
     span:
       start: 639
       end: 925
   4e73e24faf31424baf5a8afc9e8bf499:
-    page_index: 3a
-    page_info: null
-    reference: I8LS170620005
+    imgnum: 5
+    reference: I8LS170620005.jpg
     span:
       start: 930
       end: 1362
   3d6736b601f2426098cdad4f66fa1ee8:
-    page_index: 3b
-    page_info: null
-    reference: I8LS170620006
+    imgnum: 6
+    reference: I8LS170620006.jpg
     span:
       start: 1367
       end: 1809
   e3791758cb1c4002b2ba2700144d1d38:
-    page_index: 4a
-    page_info: null
-    reference: I8LS170620007
+    imgnum: 7
+    reference: I8LS170620007.jpg
     span:
       start: 1814
       end: 2228
   33a8ad88d46e44db8a2ac5096d89850c:
-    page_index: 4b
-    page_info: null
-    reference: I8LS170620008
+    imgnum: 8
+    reference: I8LS170620008.jpg
     span:
       start: 2233
       end: 2692
   b855d87f3c8943ee9a83879c82cc62b8:
-    page_index: 5a
-    page_info: null
-    reference: I8LS170620009
+    imgnum: 9
+    reference: I8LS170620009.jpg
     span:
       start: 2697
       end: 3163
   2df85e8ba9724e97bddb4aecb27955a2:
-    page_index: 5b
-    page_info: null
-    reference: I8LS170620010
+    imgnum: 10
+    reference: I8LS170620010.jpg
     span:
       start: 3168
       end: 3678
   3263fe6901d141be984101cdebec9d0d:
-    page_index: 6a
-    page_info: null
-    reference: I8LS170620011
+    imgnum: 11
+    reference: I8LS170620011.jpg
     span:
       start: 3683
       end: 4093
   0a1133207dc94e3ab5990e66b31fcf5c:
-    page_index: 6b
-    page_info: null
-    reference: I8LS170620012
+    imgnum: 12
+    reference: I8LS170620012.jpg
     span:
       start: 4098
       end: 4580
   f8bfe03750824d9199c4f3bd5562e945:
-    page_index: 7a
-    page_info: null
-    reference: I8LS170620013
+    imgnum: 13
+    reference: I8LS170620013.jpg
     span:
       start: 4585
       end: 5073
   31bddd3ac90d4eea9d908338a09fc2f8:
-    page_index: 7b
-    page_info: null
-    reference: I8LS170620014
+    imgnum: 14
+    reference: I8LS170620014.jpg
     span:
       start: 5078
       end: 5510
   049e4a032e844afb9225987f666c8a34:
-    page_index: 8a
-    page_info: null
-    reference: I8LS170620015
+    imgnum: 15
+    reference: I8LS170620015.jpg
     span:
       start: 5515
       end: 5972
   3059c1ea5bf64518907b272259605747:
-    page_index: 8b
-    page_info: null
-    reference: I8LS170620016
+    imgnum: 16
+    reference: I8LS170620016.jpg
     span:
       start: 5977
       end: 6402
   2e3df3332ef64052b3f0c5d18102c75f:
-    page_index: 9a
-    page_info: null
-    reference: I8LS170620017
+    imgnum: 17
+    reference: I8LS170620017.jpg
     span:
       start: 6407
       end: 6816
   a65bdebeb7284e148a462c957b11503e:
-    page_index: 9b
-    page_info: null
-    reference: I8LS170620018
+    imgnum: 18
+    reference: I8LS170620018.jpg
     span:
       start: 6821
       end: 7247
   f483a826c2274dc0a2bd76c2d6895499:
-    page_index: 10a
-    page_info: null
-    reference: I8LS170620019
+    imgnum: 19
+    reference: I8LS170620019.jpg
     span:
       start: 7252
       end: 7639
   d3d00d1e5f6c4138b828bc5c3d327861:
-    page_index: 10b
-    page_info: null
-    reference: I8LS170620020
+    imgnum: 20
+    reference: I8LS170620020.jpg
     span:
       start: 7644
       end: 8070
   ecc6d85d3778488ba12a7026c4018106:
-    page_index: 11a
-    page_info: null
-    reference: I8LS170620021
+    imgnum: 21
+    reference: I8LS170620021.jpg
     span:
       start: 8075
       end: 8562
   dffb06d0e6c34230b0b4af20d5432bf1:
-    page_index: 11b
-    page_info: null
-    reference: I8LS170620022
+    imgnum: 22
+    reference: I8LS170620022.jpg
     span:
       start: 8567
       end: 9072
   8bdf44d0309d444cb999a7c7f0335f23:
-    page_index: 12a
-    page_info: null
-    reference: I8LS170620023
+    imgnum: 23
+    reference: I8LS170620023.jpg
     span:
       start: 9077
       end: 9560
   4ddfe532bea94cd5a6753773c813e9f5:
-    page_index: 12b
-    page_info: null
-    reference: I8LS170620024
+    imgnum: 24
+    reference: I8LS170620024.jpg
     span:
       start: 9565
       end: 10066
   c248c6b1b7d3491487291f19f55ca4f3:
-    page_index: 13a
-    page_info: null
-    reference: I8LS170620025
+    imgnum: 25
+    reference: I8LS170620025.jpg
     span:
       start: 10071
       end: 10532
   435d95dfff974025ae4dbfc90f8e17c5:
-    page_index: 13b
-    page_info: null
-    reference: I8LS170620026
+    imgnum: 26
+    reference: I8LS170620026.jpg
     span:
       start: 10537
       end: 11046
   fdb01a79fbd34b9bbc12d80cc50d55e3:
-    page_index: 14a
-    page_info: null
-    reference: I8LS170620027
+    imgnum: 27
+    reference: I8LS170620027.jpg
     span:
       start: 11051
       end: 11610
   d6adad95e8ac443aaba1d4eb6668a151:
-    page_index: 14b
-    page_info: null
-    reference: I8LS170620028
+    imgnum: 28
+    reference: I8LS170620028.jpg
     span:
       start: 11615
       end: 12174
   5fc55cd7aa4243e589a43c0cb102e72b:
-    page_index: 15a
-    page_info: null
-    reference: I8LS170620029
+    imgnum: 29
+    reference: I8LS170620029.jpg
     span:
       start: 12179
       end: 12536
   c90615ae41c34d2a9351cda215c2285d:
-    page_index: 15b
-    page_info: null
-    reference: I8LS170620030
+    imgnum: 30
+    reference: I8LS170620030.jpg
     span:
       start: 12541
       end: 12541
