--- a/P006867.opf/layers/v001/Pagination.yml
+++ b/P006867.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: c6eda53874bc41378419783d3d8fd977
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   c797195cea5f4cf8b65c3840150c0130:
