--- a/P006867.opf/meta.yml
+++ b/P006867.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P006867
 initial_creation_type: ocr
+created_at: 27/03/2020
+last_modified_at: 25/11/2021
 source_metadata:
   id: bdr:W8LS17056
   title: ལམ་རིམ་དམིགས་རིམ་མདོར་བསྡུས།
